# PlazaWalkC-

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: .Board.h.swo  Agent.h  Board.cpp  Board.h  BoardAgent.cpp  BoardAgent.h  BoardAgentListener.h  BoardCallBack.cpp  BoardCallback.cpp  BoardCallback.h  BoardCallback_Accountant.cpp  BoardCallback_Accountant.h  BoardCallback_Printer.cpp  BoardCallback_Printer.h  BoardChanger.h  BoardChanger_Reg.cpp  BoardChanger_Reg.h  BoardListener.h  BoardNote.cpp  BoardNote.h  BoardProxy.cpp  BoardProxy.h  BoardReader.h  BoardReader_Reg.cpp  BoardReader_Reg.h  BoardRecorderAgent.cpp  BoardRecorderAgent.h  Box.cpp  Box.h  BoxChanger.h  BoxChanger_Reg.cpp  BoxChanger_Reg.h  BoxInfo.cpp  BoxInfo.h  BoxListener.cpp  BoxListener.h  BoxNote.cpp  BoxNote.h  BoxReader.h  BoxReader_Reg.cpp  (+77 more)
tests/: .test_board.cpp.swn  .test_board.cpp.swo  BoardNote_core.cpp  BoardProxy.cpp  BoardProxy_core.cpp  Board_core.cpp  Board_threads.cpp  BoxInfo_core.cpp  Box_common.cpp  Box_core.cpp  Box_getters_setters.cpp  Box_threads.cpp  BroadcastAgent_core.cpp  Color_core.cpp  Decider_Risk1_core.cpp  Decider_Safe_core.cpp  Drop_core.cpp  Drop_getters_setters.cpp  MainSetup_core.cpp  MoveType_core.cpp  Mover_Reg_core.cpp  Mover_Reg_getters_setters.cpp  NoteAccountant_core.cpp  PositionManager_Diagonal_core.cpp  PositionManager_Down_core.cpp  PositionManager_Step_core.cpp  PositionManager_Up_core.cpp  Position_core.cpp  Recorder_core.cpp  Rectangle_core.cpp  SpotListener_core.cpp  SpotType_core.cpp  Spot_core.cpp  Spot_threads.cpp  Util_core.cpp  board_core.cpp  board_getters_setters.cpp  board_regular.cpp  board_stock_methods.cpp  board_threads.cpp  (+27 more)
